...
          textColor="white"
          backgroundColor="blue"
        />
      )}

      <ButtonNext
        testID="StartVerificationButton"
        onPress={() => navigation.push('PhoneNumberInput', {})}
        text={`${
          authCodeExpires
            ? `Neuen Code senden${countdown ? ` (${countdown})` : ''}`
            : 'VERIFIZIEREN'
        } `}
        disabled={countdown > 0}
        textColor="white"
        backgroundColor={authCodeExpires ? 'lightBlue' : 'blue'}
      />
    </ScrollView>
...
