...

  return (
    <SafeAreaView testID="Introduction">
      <Pager
        nextButton
        nextText="Verstanden"
        finishText="Später"
        finishAction={finishAction}>
        {slideScreens}
      </Pager>
    </SafeAreaView>
  );
};
...
